add docx documentation

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ functions/user/__pycache__/login.cpython-312.pyc
 functions/user/__pycache__/logout.cpython-312.pyc
 functions/user/__pycache__/register.cpython-312.pyc
 .env
+Sprint4 - Database NON-RELATIONAL - 2TDSPX - TPC.zip
